@@ -16,6 +16,7 @@ PTXCONF_PROJECT_VERSION="-0.00"
 PTXCONF_DEVMEM2=m
 # PTXCONF_DEVNODES is not set
 PTXCONF_LIBUIO=m
+PTXCONF_MBREF_REG=m
 
 #
 # PTXdist Base Configuration       
@@ -255,6 +256,7 @@ PTXCONF_GCCLIBS_CXX=y
 # PTXCONF_GCCLIBS_GCJ is not set
 PTXCONF_ICONV=y
 # PTXCONF_GLOBAL_IPV6 is not set
+PTXCONF_KERNEL=y
 PTXCONF_GLOBAL_LARGE_FILE=y
 PTXCONF_LIBC=y
 PTXCONF_LIBC_GLIBC=y
