@@ -33,6 +33,7 @@ PTXCONF_DEVNODES_UIO_MAJOR=254
 # PTXCONF_DEVNODES_BLK is not set
 PTXCONF_DEVNODES_ICAP=m
 PTXCONF_LIBUIO=m
+PTXCONF_MBREF_REG=m
 
 #
 # PTXdist Base Configuration       
@@ -271,6 +272,7 @@ PTXCONF_GCCLIBS_CXX=y
 # PTXCONF_GCCLIBS_GCJ is not set
 PTXCONF_ICONV=y
 # PTXCONF_GLOBAL_IPV6 is not set
+PTXCONF_KERNEL=y
 PTXCONF_GLOBAL_LARGE_FILE=y
 PTXCONF_LIBC=y
 PTXCONF_LIBC_GLIBC=y
